varioud junit tests added